--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <body>
         <h1 id="cookie-counter">0</h1>
         <button id="cookie-clicker">Make Cookies</button>
-        <script type="text/javascript">
-        //declare default variables
-        let cookieCount = 0;
-        let clickPower = 1;
-        //declare DOM  variables
-        let cookieCounter = document.getElementById('cookie-counter');
-        let cookieClicker = document.getElementById('cookie-clicker');
 
-        //everytime a user clicks the button, their cookies are increased by the value of their clickPower.
-        cookieClicker.addEventListener("click", function(){
-            cookieCount = cookieCount + clickPower;
-            cookieCounter.innerHTML = cookieCount;
-        })
-        </script>
+        <hr>
+            <h2>Shop</h2>
+            <p>Click Power</p>
+            <p>Produces <span id="click-power-multiple">1</span> cookie(s) per click</p>
+            <button id="buy-click-power">Buy for <span id="click-power-price">50</span></button>
+            <p>level: <span id="click-power-level">1</span></p>
+        </hr>
+
+        <script src="scripts.js" charset="utf-8"></script>
+
+
     </body>
 </html>
