--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     <p>Producing <span id="grandma-multiple">0</span> cookies per second!</p>
     <button id="buy-grandma">Buy for <span id="grandma-price">500</span></button>
     <p>Level: <span id="grandma-level">0</span></p>
-
+    <hr>
+    <p>Cookie Manufacturing Facility</p>
+    <p>Proudcing <span id="facility-multiple">0</span> cookies per second!</p>
+    <button id="buy-facility">Buy for <span id="facility-price">10000</span></button>
+    <p>Level: <span id="facility-level">0</p>
     <script src="scripts.js" charset="utf-8"></script>
 
 
