--- a/index.html
+++ b/index.html
@@ -16,19 +16,32 @@
     <p>Produces <span id="click-power-multiple">1</span> cookie(s) per click</p>
     <button id="buy-click-power">Buy for <span id="click-power-price">50</span></button>
     <p>level: <span id="click-power-level">1</span></p>
+
     <hr>
     <p>Grandmas</p>
     <p>Producing <span id="grandma-multiple">0</span> cookies per second!</p>
     <button id="buy-grandma">Buy for <span id="grandma-price">500</span></button>
     <p>Level: <span id="grandma-level">0</span></p>
+
+    <hr>
+    <p>Steroids</p>
+    <p>Producing <span id="steroid-multiple">0</span> cookies per second!</p>
+    <button id="buy-steroid">Buy for <span id="steroid-price">500</span></button>
+    <p>Level: <span id="steroid-level">0</span></p>
+
     <hr>
     <p>Cookie Manufacturing Facility</p>
-    <p>Proudcing <span id="facility-multiple">0</span> cookies per second!</p>
-    <button id="buy-facility">Buy for <span id="facility-price">10000</span></button>
+    <p>Producing <span id="facility-multiple">0</span> cookies per second!</p>
+    <button id="buy-facility">Buy for <span id="facility-price">100000</span></button>
     <p>Level: <span id="facility-level">0</p>
     <script src="scripts.js" charset="utf-8"></script>
+    <hr>
 
-
+    <!-- <p>Grandma Steroids</p>
+    <p><span id="steroid-mutiple">0</span>x stronger!!!</p>
+    <p>Collect </p>
+    <button id="buy-steroid"Buy for <span id="steroid-price">500000</span></button>
+    <p>Level: <span id="steroid-level">0</span></p> -->
 </body>
 
 </html>
